welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (!estFaceMur){
	recule();
	if(estSurBiscuit){
	prendBiscuit();
	avance();avance();avance();avance();avance();
	poseBiscuit();
	recule();
	}else{
		reucle();
	}
	
	
}else{
gauche();avance();gauche();avance();
}


